# smallfetch

./: .gitignore  CMakeLists.txt  README.md  ascii.txt  flake.nix  main  main.c
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: pwd3h2cz5ygwja9x4crl3sh0fnq0jzn2-source
include/: cpu.h  hostname.h  kernel.h  loadascii.h  memory.h  packages.h
src/: cpu.c  hostname.c  kernel.c  loadascii.c  main.c  memory.c  packages.c
src/modules/: cpu.c  kernel.c  memory.c
